[gd_scene load_steps=3 format=3 uid="uid://2k1r7to7kbos"]

[ext_resource type="Script" path="res://scripts/seed_menu.gd" id="1_kmm8j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysbtx"]
bg_color = Color(0.203922, 0.109804, 0.00784314, 1)

[node name="SeedMenu" type="PanelContainer"]
offset_right = 1000.0
offset_bottom = 620.0
script = ExtResource("1_kmm8j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ysbtx")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_top = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="FarmTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox"]
layout_mode = 2
text = "Farm Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FarmTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UniversalVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox/FarmTileHBox"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="UniversalButton" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox/FarmTileHBox/UniversalVBox"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
stretch_mode = 4

[node name="UniversalLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/FarmTileVBox/FarmTileHBox/UniversalVBox"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "UText"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VineTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/VineTileVBox"]
layout_mode = 2
text = "Vine Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VineTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/VineTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TreeTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/TreeTileVBox"]
layout_mode = 2
text = "Tree Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TreeTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/TreeTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="WaterTileVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/WaterTileVBox"]
layout_mode = 2
text = "Water Tile Plants"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaterTileHBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/WaterTileVBox"]
layout_mode = 2
theme_override_constants/separation = 0

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/FarmTileVBox/FarmTileHBox/UniversalVBox/UniversalButton" to="." method="_on_wheat_button_pressed"]
